[gd_scene load_steps=8 format=3 uid="uid://xh4uumh873h7"]

[ext_resource type="Script" path="res://scripts/hallWay1.gd" id="1_0pjag"]
[ext_resource type="Texture2D" uid="uid://7274t3m5gye8" path="res://images/hallWay.png" id="1_whbik"]
[ext_resource type="PackedScene" uid="uid://bjslxs2nfkoew" path="res://scenes/player.tscn" id="2_x2kfa"]
[ext_resource type="Script" path="res://scripts/fallowCam.gd" id="3_ms27f"]
[ext_resource type="PackedScene" uid="uid://dq3qjwhrl4stg" path="res://scenes/npcs.tscn" id="4_x60cc"]
[ext_resource type="Texture2D" uid="uid://dl0cohso5huyr" path="res://images/bobiJoke.png" id="5_kcr7h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_noego"]
size = Vector2(11.5, 3)

[node name="hallWay1" type="Node2D"]
texture_filter = 1
script = ExtResource("1_0pjag")

[node name="hallWay1" type="Sprite2D" parent="."]
position = Vector2(763, 149)
scale = Vector2(2, 2)
texture = ExtResource("1_whbik")

[node name="player" parent="hallWay1" instance=ExtResource("2_x2kfa")]
position = Vector2(-286.5, 39)
scale = Vector2(1, 1)

[node name="Camera2D" type="Camera2D" parent="hallWay1/player" node_paths=PackedStringArray("map")]
position = Vector2(0, -25)
limit_left = 0
limit_top = -30
script = ExtResource("3_ms27f")
map = NodePath("../..")

[node name="door1" parent="hallWay1" instance=ExtResource("4_x60cc")]
position = Vector2(-287, 19.5)
scale = Vector2(1.515, 0.77)
flipCharacter = false

[node name="door2" parent="hallWay1" instance=ExtResource("4_x60cc")]
position = Vector2(-109, 19)
scale = Vector2(1.49, 0.77)
flipCharacter = false

[node name="door3" parent="hallWay1" instance=ExtResource("4_x60cc")]
position = Vector2(74.5, 19.5)
scale = Vector2(1.785, 0.77)
flipCharacter = false

[node name="door4" parent="hallWay1" instance=ExtResource("4_x60cc")]
position = Vector2(249, 20)
scale = Vector2(1.487, 0.77)
flipCharacter = false

[node name="bobiJoke" type="Sprite2D" parent="hallWay1"]
y_sort_enabled = true
position = Vector2(-178, 25)
texture = ExtResource("5_kcr7h")
offset = Vector2(0, -27)
flip_h = true

[node name="bobiJoke" parent="hallWay1/bobiJoke" instance=ExtResource("4_x60cc")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hallWay1/bobiJoke/bobiJoke"]
position = Vector2(1.75, -1.5)
shape = SubResource("RectangleShape2D_noego")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(2, 294, 66, 179, 1466, 177, 1553, 308, 2, 294, 1525, 294, 1459, 191, 69, 191)
